# result

./: README.md  main.py  pyproject.toml  requirements.txt  user_settings.json
data/: user_settings.json
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py  test_views.py
