[tool.poetry]
name = "pyproject-toml"
version = "0.1.0"
description = ""
authors = ["Nurlan <nurlan.grachyov@mail.ru>"]
readme = "README.md"
packages = [{include = "pyproject"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
